fixed nav stretch

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,9 @@ body {
 #main_container {
     width: 100%;
     height: 1863px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .AT {
@@ -31,19 +34,22 @@ body {
 
 #nav {
     width: 100%;
-    height: 70px;
+    height: 75px;
     background-color: #f9cf00;
     border: solid 1px #f9cf00;
+    display: flex;
+    justify-content: center;
 }
 
 #navbg {
     width: 1024px;
     height: 70px;
-    background-color: gray;
+    background-color: #f9cf00;
     border: solid 1px #f9cf00;
 }
 
 #nav_text {
+    width: 1024px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
